--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -19,11 +19,13 @@ nav a {
     padding: 0.9rem;
     border-radius: 50%;
     display: flex;
-    color: var(--color-light);
+
+    color: var(--color-primary);
     font-size: 1.1rem;    
 }
 nav a :hover{
     background: rgba(0,0,0,0.2);
+    color: var(--color-light);
 }
 nav a :active{
     background: var(--color-bg);
