--- a/src/index.scss
+++ b/src/index.scss
@@ -10,13 +10,21 @@
   list-style:none;
   text-decoration:none;
 }
+// :root {
+//   --color-bg: #1f1f38;
+//   --color-bg-variant: #2c2c6c;
+//   --color-primary: #4db5ff;
+//   --color-primary-variant:rgba(77,181,255,0.4);
+//   --color-white: #fff;
+//   --color-light: rgba(255,255,255,0.6);
+
 :root {
-  --color-bg: #1f1f38;
-  --color-bg-varient: #2c2c6c;
-  --color-primary: #4db5ff;
-  --color-primary-variant:rgba(77,181,255,0.4);
+  --color-bg: #2C3639;
+  --color-bg-variant: #3F4E4F;
+  --color-primary: #A27B5C;
+  --color-primary-variant:#6F553F;
   --color-white: #fff;
-  --color-light: rgba(255,255,255,0.6);
+  --color-light: #DCD7C9;
 
   --container-width-lg: 75%;
   --container-width-md: 86%;
@@ -39,6 +47,9 @@ body {
   color: var(--color-white);
   line-height: 1.7; 
 background-image: url("https://www.transparenttextures.com/patterns/arches.png");
+//background-color: #338c00;
+//background-image: url("https://www.transparenttextures.com/patterns/dark-brick-wall.png");
+//background-image: url("https://www.transparenttextures.com/patterns/gravel.png");
 }
 
 /*--------------General Styles------------*/
@@ -57,9 +68,12 @@ h1 {
 }
 
 section {
-  margin-top: 8rem;
+  margin-top: 7rem;
   height: 100vh;
 }
+
+
+
 section > h2,section > h5 {
 text-align: center;
 color: var(--color-light);
