--- a/src/index.scss
+++ b/src/index.scss
@@ -46,7 +46,7 @@ body {
   background-color: var(--color-bg);
   color: var(--color-white);
   line-height: 1.7; 
-background-image: url("https://www.transparenttextures.com/patterns/arches.png");
+//background-image: url("https://www.transparenttextures.com/patterns/arches.png");
 //background-color: #338c00;
 //background-image: url("https://www.transparenttextures.com/patterns/dark-brick-wall.png");
 //background-image: url("https://www.transparenttextures.com/patterns/gravel.png");
