--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -50,6 +50,7 @@ display: grid;
     grid-template-columns: repeat(3,1fr);
     gap: 1.5rem;    
 }
+
 //--- cards
  #about article {  
    background: var(--color-bg-variant);
@@ -65,21 +66,24 @@ display: grid;
     border-color: var(--color-bg-varient);
     cursor: default;
 }
+
 .about_icon {
     color: var(--color-primary);
     font-size: 1.4rem;
     margin-bottom: 1.5rem;
     position: relative;
     left: 33%;
- 
 }
+
 .about_card h5 {
     font-size: 0.9rem;
 }
+
 .about_card small {
     font-size: 0.7rem;
     color: var(--color-light);
 }
+
 .about_content p {
     margin: 2rem 0 2.6rem;
     color: var(--color-light);
@@ -89,22 +93,30 @@ display: grid;
 
 @media screen and (max-width: 1024px) {
     #about {
-        height: fit-content;
-    }
+        height:100vh;
+        padding-top: 7rem;
+        overflow: hidden;
+        padding-bottom: 0;
+        margin: 3rem auto;
+      }
+
     .about_container {
         grid-template-columns: 1fr;
         gap: 0;
     }
+
     .about_me {
         width: 50%;
         margin: 2rem auto 5rem;
         aspect-ratio: 1/.75;
     }
+
     .about_me-image {
         width: 100%;
         margin: 0 auto 2rem;
         top: 16px;
     }
+
     .about_content {
         margin: 1rem 0 1.5rem;
     }
@@ -114,27 +126,38 @@ display: grid;
 /*--------Media Queries (small)---------*/
 
 @media screen and (max-width: 600px) {
-
     #about {
-        height: fit-content;
-    }
+        height:130vh;
+        width:105%;
+        padding-top: 7rem;        
+        padding-bottom: 0;
+        margin: 3rem auto;
+      }  
+
     .about_container {
         grid-template-columns: 1fr;
     }
     .about_me {
         width: 55%;
-        margin: 0 auto 2rem;   
-       
+        margin: 0 auto 2rem;          
     }
        #about section > h2 {
         margin-bottom: 12rem;
       }  
 
-
+      div.about_content > div > article > small {
+        color: aqua;      
+        position: relative;
+        top: 20%;
+        padding: 0%;
+        margin: 0;
+        float: left; 
+      }
+     
     .about_me-image {
         width: 100%;
         margin: 0 auto 2rem;
-        top: 15px;
+        top: 2px;
     }
 
     .about_cards {
@@ -142,11 +165,23 @@ display: grid;
         gap: 1rem;
         margin-top: 2rem;
     }
-    .about_content {
-        text-align: center;
-    }
+  
     .about_content p {
         margin: 1.5rem 0 ;
+    }
+    .about_icon {
+        color: var(--color-primary);
+        font-size: 1.4rem;
+        margin-bottom: 1.5rem; 
+        position: relative;         
+     
+    }
+
+    article {
+    align-items: center !important;
+    } 
+    .about_card small {
+        text-align: center;    
     }
     
 }
